--- a/src/components/Partners.css
+++ b/src/components/Partners.css
@@ -1,3 +1,8 @@
 .partners {
-    background-color: #e2e7e8;
+    background-color: #f9f9f9;
+    padding: 35px 0px;
+}
+
+.partners .content-title {
+    margin-bottom: 40px;
 }
