--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -1,6 +1,6 @@
 .who-we-are {
     background-color: #f3f5f7;
-    padding: 30px 0px;
+    padding: 35px 0px;
 }
 
 .who-we-are .content-title {
@@ -25,6 +25,7 @@
 
 .bio-container.left-column .bio-content {
     margin-right: 15px;
+    text-align: right;
 }
 
 .bio-container.right-column .bio-content {
@@ -56,4 +57,15 @@
     width: 173px;
     height: 200px;
     min-width: 173px;
+}
+
+@media(max-width: 900px) {
+    .bio-container {
+        margin-right: 0px;
+        width: 100% !important;
+    }
+
+    .bio-name {
+        align-self: auto !important;
+    }
 }
