--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,12 @@ code {
   }
 }
 
-@media(max-width: 992px) {
+@media(max-width: 990px) {
   .container {
     width: 100%;
   }
+}
+
+@media(max-width: 900px) {
+  
 }
